logs/flask-fas.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_FAS-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/fedora'...
Listing './lib/python3.5/site-packages/fedora/client'...
Listing './lib/python3.5/site-packages/fedora/django'...
Listing './lib/python3.5/site-packages/fedora/django/auth'...
Listing './lib/python3.5/site-packages/fedora/django/auth/management'...
Listing './lib/python3.5/site-packages/fedora/tg'...
Listing './lib/python3.5/site-packages/fedora/tg/identity'...
Listing './lib/python3.5/site-packages/fedora/tg/templates'...
Listing './lib/python3.5/site-packages/fedora/tg/templates/genshi'...
Listing './lib/python3.5/site-packages/fedora/tg/visit'...
Listing './lib/python3.5/site-packages/fedora/tg2'...
Listing './lib/python3.5/site-packages/fedora/tg2/templates'...
Listing './lib/python3.5/site-packages/fedora/tg2/templates/genshi'...
Listing './lib/python3.5/site-packages/fedora/tg2/templates/mako'...
Listing './lib/python3.5/site-packages/fedora/wsgi'...
Listing './lib/python3.5/site-packages/fedora/wsgi/faswho'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kitchen'...
Listing './lib/python3.5/site-packages/kitchen/collections'...
Listing './lib/python3.5/site-packages/kitchen/i18n'...
Listing './lib/python3.5/site-packages/kitchen/iterutils'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/base64'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/sets'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25/collections'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27/subprocess'...
Listing './lib/python3.5/site-packages/kitchen/text'...
Listing './lib/python3.5/site-packages/kitchen/versioning'...
Listing './lib/python3.5/site-packages/kitchen-1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/munch'...
Listing './lib/python3.5/site-packages/munch-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/openidc_client'...
Listing './lib/python3.5/site-packages/openidc_client-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_fedora-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/functional'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
